--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Memoday",
   "main": "index.js",
   "scripts": {
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "deploy:hosting": "firebase deploy --only hosting"
   },
   "repository": {
     "type": "git",
