setup(web): init vue app with typescript scss and jest

--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     ]
   },
   "hosting": {
-    "public": "public",
+    "public": "web/dist",
     "ignore": [
       "firebase.json",
       "**/.*",
