--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "deploy": "firebase deploy",
-    "deploy:hosting": "firebase deploy --only hosting"
+    "deploy:hosting": "firebase deploy --only hosting",
+    "deploy:hosting:ci": "firebase deploy --only hosting --token=$FIREBASE_TOKEN"
   },
   "repository": {
     "type": "git",
