--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ workflows:
     jobs:
       - build
       - deploy:
-          requires: build
+          requires: 
+            - build
         filters:
           branches:
             only: master
