--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@ jobs:
           paths: node_modules
           key: web-deps-{{ checksum "package.json" }}
       - run: npm build
+      - persist_to_workspace:
+          root: dist
 
   deploy:
     docker:
@@ -29,6 +31,8 @@ jobs:
       - save_cache:
           paths: node_modules
           key: main-deps-{{ checksum "package.json" }}
+      - attach_workspace:
+          at: web/dist
       - run: npm run deploy:hosting:ci
 
 workflows:
