--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           paths: node_modules
           key: web-deps-{{ checksum "package.json" }}
       - run: npm build
+      - run: pwd
       - persist_to_workspace:
           root: web/dist
 
