--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/node:10.15.3
     working_directory: web
     steps:
-      - checkout
+      - checkout:
           path: web
       - restore_cache:
           keys:
