--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^5.9.3",
+    "firebaseui": "^3.5.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
