--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^4.1.0 || ^5.0.0",
+    "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-knobs": "^4.1.0 || ^5.0.0",
     "@storybook/addon-links": "^4.1.0 || ^5.0.0",
     "@storybook/addon-notes": "^4.1.0 || ^5.0.0",
