feat(home): home page

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "short_name": "web",
+  "name": "MemoDay",
+  "short_name": "MemoDay",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
