--- a/web/package.json
+++ b/web/package.json
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "date-fns": "^1.30.1",
     "firebase": "^5.9.3",
     "firebaseui": "^3.5.2",
-    "date-fns": "^1.30.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-module-decorators": "^0.9.9"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.0.11",
