--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -13,8 +13,8 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "background_color": "#F1F1F1",
+  "theme_color": "#E88D72"
 }
