--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "buefy": "^0.7.6",
     "core-js": "^2.6.5",
     "date-fns": "^1.30.1",
     "firebase": "^5.9.3",
@@ -20,7 +21,6 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.5.5",
     "vuex": "^3.0.1",
     "vuex-module-decorators": "^0.9.9"
   },
@@ -35,7 +35,7 @@
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-pwa": "^3.5.0",
     "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-plugin-unit-jest": "^3.6.3",
+    "@vue/cli-plugin-unit-jest": "^3.7.0",
     "@vue/cli-service": "^3.5.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
@@ -47,8 +47,6 @@
     "ts-jest": "^23.0.0",
     "typescript": "^3.2.1",
     "vue-cli-plugin-storybook": "^0.6.1",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vue-template-compiler": "^2.5.21"
   }
 }
