--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "ts-jest": "^23.0.0",
     "typescript": "^3.2.1",
     "vue-cli-plugin-storybook": "^0.6.1",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
