--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -3,17 +3,12 @@
   "short_name": "MemoDay",
   "icons": [
     {
-      "src": "./img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
+      "src": "./img/icons/favicon-196x196.png",
+      "sizes": "196x196",
       "type": "image/png"
     }
   ],
-  "start_url": "",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#F1F1F1",
   "theme_color": "#E88D72"
