--- a/web/.env
+++ b/web/.env
@@ -4,3 +4,5 @@ VUE_APP_FIREBASE_DATABASE_URL=https://memoday-e29ea.firebaseio.com
 VUE_APP_FIREBASE_PROJECT_ID=memoday-e29ea
 VUE_APP_FIREBASE_STORAGE_BUCKET=memoday-e29ea.appspot.com
 VUE_APP_FIREBASE_MESSAGING_SENDER_ID=298272960522
+VUE_APP_FIREBASE_MESSAGING_KEY=BCQ5EiGL98V-fOq5hw7R04wwa4HvPMY5ohi-04fziSVKxdxSJPD3QMzrtRk3QY1brLF4TfOi7lNxAYTeCbhdS9w
+VUE_APP_SUBSCRIBE_TO_TOPIC=https://us-central1-memoday-e29ea.cloudfunctions.net/subscribeToTopic
