--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "memoday",
   "version": "1.0.0",
-  "description": "Memoday",
-  "main": "index.js",
+  "description": "MemoDay",
   "scripts": {
     "deploy": "firebase deploy",
-    "deploy:hosting": "firebase deploy --only hosting",
+    "deploy:functions": "firebase use default && firebase deploy --only functions",
+    "deploy:functions:dev": "firebase use dev && firebase deploy --only functions",
+    "deploy:hosting": "firebase use default && firebase deploy --only hosting",
+    "deploy:hosting:dev": "firebase use dev && npm run deploy:hosting",
     "deploy:hosting:ci": "firebase deploy --only hosting --token=$FIREBASE_TOKEN"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xebia-france/memoday.git"
   },
-  "author": "",
+  "author": "Xebia <blacroix@xebia.fr>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/xebia-france/memoday/issues"
@@ -22,5 +24,6 @@
     "firebase-tools": "^6.6.0",
     "tslint": "^5.15.0",
     "typescript": "^3.4.2"
-  }
+  },
+  "dependencies": {}
 }
