--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "serve:dev": "vue-cli-service serve --mode dev",
+    "build:dev": "vue-cli-service build --mode dev",
     "lint": "vue-cli-service lint",
     "storybook:build": "vue-cli-service storybook:build -c config/storybook",
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook",
@@ -16,6 +18,7 @@
     "date-fns": "^1.30.1",
     "firebase": "^5.9.3",
     "firebaseui": "^3.5.2",
+    "ky": "^0.11.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
