--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -11,5 +11,6 @@
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#F1F1F1",
-  "theme_color": "#E88D72"
+  "theme_color": "#E88D72",
+  "gcm_sender_id": "103953800507"
 }
