--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,11 @@
   "main": "lib/index.js",
   "dependencies": {
     "cors": "^2.8.5",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^2.3.1"
+  },
+  "engines": {
+    "node": "8"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
